# LB6

./: CMakeLists.txt  main  main.cpp
Task_1/header-files/: funcs.h
Task_1/src/: funcs.cpp  task1.cpp
Task_1/tests/: tests.cpp
Task_2/header-files/: funcs.h
Task_2/src/: funcs.cpp  task2.cpp
Task_2/tests/: tests.cpp
Task_3/header-files/: funcs.h
Task_3/src/: funcs.cpp  task3.cpp
Task_3/tests/: tests.cpp
general/header-files/: constants.h  funcs.h
general/src/: funcs.cpp
tests/: funcs.cpp  head.h  tests.cpp
